--- a/css/template_1.css
+++ b/css/template_1.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: "Times New Roman", Georgia, Serif, "FontAwesome";
     line-height: 1.5;
@@ -42,10 +46,10 @@ hr {
         display: none;
     }
 
-    .header .links:hover .drop {
-        display: flex;
+    /* .header .icons:hover .drop {
+        display: block!important;
         z-index: 1;
-    }
+    }  */
 
     .features .about img {
         display: none;
@@ -65,6 +69,10 @@ hr {
 
     .landing {
         padding-top: 55px;
+    }
+
+    .header .nav a:hover {
+        padding: 10px 5px !important;
     }
 
 }
@@ -155,34 +163,42 @@ hr {
 }
 
 .header .icons {
-    width: 30px;
-    display: flex;
-    flex-wrap: wrap;
+    border: none;
     float: right;
-    justify-content: flex-end;
-    padding-top: 5px;
+    width: 35px;
+    color: #000;
+    background-color: transparent;
+    padding-right: 0px;
 }
 
-.header .icons span {
+.header .span-div {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    padding-top: 5px;
+    width: 100%;
+}
+
+.header .span-div span {
     margin-bottom: 5px;
     height: 2px;
     background-color: black;
 }
 
-.header .icons span:first-child {
+.header .span-div span:first-child {
     width: 100%;
 }
 
-.header .icons span:nth-child(2) {
+.header .span-div span:nth-child(2) {
     width: 60%;
     transition: 0.3s;
 }
 
-.header .icons span:last-child {
+.header .span-div span:last-child {
     width: 100%;
 }
 
-.header .links:hover .icons span:nth-child(2) {
+.header .icons:hover .span-div span:nth-child(2) {
     width: 100%;
 }
 
@@ -190,7 +206,7 @@ hr {
     right: 20px;
     top: 45px;
     position: absolute;
-    display: flex;
+    /* display: flex; */
     flex-direction: column;
     background-color: #9e9e9e7d;
     display: none;
@@ -206,6 +222,7 @@ hr {
     right: 0px;
     top: -20px;
 }
+
 /* End Header */
 
 /* Start Landing */
@@ -224,7 +241,8 @@ hr {
     font-weight: 400;
     color: #55565A;
 }
-.landing img{
+
+.landing img {
     max-height: 630px;
 }
 
@@ -253,7 +271,7 @@ hr {
     text-align: center;
 }
 
-.about .span{
+.about .span {
     background-color: #f1f1f1;
     padding: 8px 8px;
 }
@@ -296,6 +314,7 @@ form button:hover,
 .header .nav a:hover {
     background-color: #ccc !important;
 }
+
 /* End Features */
 
 /* Start Footer */
@@ -315,4 +334,5 @@ form button:hover,
 .footer p a:hover {
     color: #4CAF50;
 }
+
 /* End Footer */
